--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages!</p>
+<body style='background: linear-gradient(#ddd, white); background-repeat: no-repeat; background-attachment: fixed;'>
+<div><img src='e8logo.png'>
+</div>
 </body>
 </html>
