--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body style='background: linear-gradient(#ddd, white); background-repeat: no-repeat; background-attachment: fixed;'>
-<div><img src='e8logo.png'>
-</div>
+<div style="text-align:center;font-family:verdana;font-size:small;"><img src='e8logo.png' style='height:200px;'>
+<br><br>EnvisionEight is an investment group with a philanthropic focus from Chagrin Falls, Ohio.</div>
 </body>
 </html>
