--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <head>
 <style>
+html, body {min-height:100%;margin:0;}
 body {
-/* fallback */
-  background-color: #1a82f7;
-  background-image: url(images/linear_bg_1.png);
-  background-repeat: repeat-y;
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#feffe8+0,d6dbbf+100;Wax+3D+%231 */
+background: rgb(254,255,232); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(254,255,232,1) 0%, rgba(214,219,191,1) 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  rgba(254,255,232,1) 0%,rgba(214,219,191,1) 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  rgba(254,255,232,1) 0%,rgba(214,219,191,1) 100%);  background-repeat: no-repeat; background-attachment: fixed; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffe8', endColorstr='#d6dbbf',GradientType=0 ); /* IE6-9 */
+
+  background-repeat: no-repeat;
 
   /* Safari 4-5, Chrome 1-9 */
-  background: -webkit-gradient(linear, left top, right top, from(#1a82f7), to(#2F2727));
+  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ddd), to(#fff));
 
   /* Safari 5.1, Chrome 10+ */
-  background: -webkit-linear-gradient(left, #2F2727, #1a82f7);
+  background: -webkit-linear-gradient(top, #fff, #ddd);
 
   /* Firefox 3.6+ */
-  background: -moz-linear-gradient(left, #2F2727, #1a82f7);
+  background: -moz-linear-gradient(top, #fff, #ddd);
 
   /* IE 10 */
-  background: -ms-linear-gradient(left, #2F2727, #1a82f7);
+  background: -ms-linear-gradient(top, #fff, #ddd);
 
   /* Opera 11.10+ */
-  background: -o-linear-gradient(left, #2F2727, #1a82f7);
-
+  background: -o-linear-gradient(top, #fff, #ddd);
 }
 </style>
+<html>
 <html>
 <body>
 <div style="text-align:center;font-family:verdana;font-size:small;"><img src='e8logo.png' style='height:200px;'>
