--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffe8', end
 
   /* Opera 11.10+ */
   background: -o-linear-gradient(top, #fff, #ddd);
+  
+  background: linear-gradient(#fff, #ddd);
 }
 </style>
 <html>
