--- a/index.html
+++ b/index.html
@@ -1,40 +1,46 @@
 <!DOCTYPE html>
 <head>
 <style>
-html, body {min-height:100%;margin:0;}
+
 body {
-/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#feffe8+0,d6dbbf+100;Wax+3D+%231 */
-background: rgb(254,255,232); /* Old browsers */
-background: -moz-linear-gradient(top,  rgba(254,255,232,1) 0%, rgba(214,219,191,1) 100%); /* FF3.6-15 */
-background: -webkit-linear-gradient(top,  rgba(254,255,232,1) 0%,rgba(214,219,191,1) 100%); /* Chrome10-25,Safari5.1-6 */
-background: linear-gradient(to bottom,  rgba(254,255,232,1) 0%,rgba(214,219,191,1) 100%);  background-repeat: no-repeat; background-attachment: fixed; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffe8', endColorstr='#d6dbbf',GradientType=0 ); /* IE6-9 */
+	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#feffe8+0,d6dbbf+100;Wax+3D+%231 */
+	background: rgb(254,255,232); /* Old browsers */
+	background: -moz-linear-gradient(top,  rgba(254,255,232,1) 0%, rgba(214,219,191,1) 100%); /* FF3.6-15 */
+	background: -webkit-linear-gradient(top,  rgba(254,255,232,1) 0%,rgba(214,219,191,1) 100%); /* Chrome10-25,Safari5.1-6 */
+	background: linear-gradient(to bottom,  rgba(254,255,232,1) 0%,rgba(214,219,191,1) 100%);  background-repeat: no-repeat; background-attachment: fixed; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#feffe8', endColorstr='#d6dbbf',GradientType=0 ); /* IE6-9 */
 
-  background-repeat: no-repeat;
+	background-repeat: no-repeat;
 
-  /* Safari 4-5, Chrome 1-9 */
-  background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ddd), to(#fff));
-
-  /* Safari 5.1, Chrome 10+ */
-  background: -webkit-linear-gradient(top, #fff, #ddd);
-
-  /* Firefox 3.6+ */
-  background: -moz-linear-gradient(top, #fff, #ddd);
-
-  /* IE 10 */
-  background: -ms-linear-gradient(top, #fff, #ddd);
-
-  /* Opera 11.10+ */
-  background: -o-linear-gradient(top, #fff, #ddd);
-  
-  background: linear-gradient(#fff, #ddd);
+	background: url(E8_cf_background.png) no-repeat center center fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover; 
 }
+
+#over {
+   margin-right: auto; margin-left: auto; width: 800px; text-align: center;
+   background:rgba(255,255,255,0.5);
+   padding-bottom: 20px;
+   border-radius: 25px;
+   margin-top: 50px;
+   font-family:"Trebuchet MS", Helvetica, sans-serif;
+}
+	
+#over img {
+   display: block; margin-right: auto; margin-left: auto;
+}
+
 </style>
 <html>
 <html>
 <body>
-<div style="text-align:center;font-family:verdana;font-size:small;"><img src='e8logo.png' style='height:200px;'>
-<br><br>EnvisionEight is an investment group with a philanthropic focus from Chagrin Falls, Ohio.</div>
+<div id="over">
+	<img src='e8logo.png' style='height:200px;'>
+	<br>
+	EnvisionEight is an investment group with a philanthropic focus from Chagrin Falls, Ohio.
+</div>
 </body>
 </html>
 </head>
