--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ body {
 
 	background-repeat: no-repeat;
 
-	background: url(E8_cf_background.jpeg) no-repeat center center fixed; 
+	background: url(E8_cf_background.jpg) no-repeat center center fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
