--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <style>
-
+html, body {min-height:100%;margin:0;}
 body {
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#feffe8+0,d6dbbf+100;Wax+3D+%231 */
 	background: rgb(254,255,232); /* Old browsers */
