--- a/index.html
+++ b/index.html
@@ -20,26 +20,41 @@ body {
 }
 
 #over {
-   margin-right: auto; margin-left: auto; width: 800px; text-align: center;
+   margin-right: auto; margin-left: auto; width: 800px; text-align: justify;
    background:rgba(255,255,255,0.5);
-   padding-bottom: 20px;
+   padding-bottom: 40px;
+   padding-left: 50px;
+   padding-right: 50px;
    border-radius: 25px;
    margin-top: 50px;
-   font-family:"Trebuchet MS", Helvetica, sans-serif;
+   margin-bottom: 50px;
+   font-family:Tahoma, Geneva, sans-serif;
+   
 }
-	
-#over img {
+
+.img-center {
    display: block; margin-right: auto; margin-left: auto;
 }
+
+
 
 </style>
 <html>
 <html>
 <body>
 <div id="over">
-	<img src='e8logo.png' style='height:200px;'>
+	<img class="img-center" src='e8logo.png' style='height:200px;'>
 	<br>
-	EnvisionEight is an investment group with a philanthropic focus from Chagrin Falls, Ohio.
+	<p>EnvisionEight, LLC is an investment group with a philanthropic focus from Chagrin Falls, Ohio.</p>
+	<p>Founded in 2007, its eight members focus on their core values of investing in each other while promoting volunteerism and education in their communities.</p>
+	<p>Each spring, the group awards the EnvisionEight Leaders of Tomorrow scholarship to a graduating senior at Chagrin Falls High School. This scholarship recognizes students who exemplify outstanding leadership, teamwork, intellectual curiosity, entrepreneurship, work ethic, and community service.</p>
+	<p>EnvisionEight is Alex Budin, Michael Kennedy, Stephen Kuenzig, Patrick Lynch, Bill McGibony, Jeffrey Miller, Garrett Monda, and Matthew Trinetti.</p>
+	<p>Contact EnvisionEight on <a href='https://www.facebook.com/EnvisionEight-100121666733051/'>Facebook</a>. 
+	<br/>
+	<a href='https://www.facebook.com/EnvisionEight-100121666733051/'><img id="fb" src='facebookIcon.png'/></a>
+	</p>
+	<img class="img-center" style="box-shadow: 10px 10px 5px #888888;" src='envisioneight.jpg'/>
+
 </div>
 </body>
 </html>
