--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@ body {
    border-radius: 25px;
    margin-top: 50px;
    margin-bottom: 50px;
-   font-family:Tahoma, Geneva, sans-serif;
+   font-family: Verdana, Geneva, sans-serif;
+   line-height: 150%;
    
 }
 
