--- a/index.html
+++ b/index.html
@@ -46,15 +46,11 @@ body {
 <div id="over">
 	<img class="img-center" src='e8logo.png' style='height:200px;'>
 	<br>
-	<p>EnvisionEight, LLC is an investment group with a philanthropic focus from Chagrin Falls, Ohio.</p>
-	<p>Founded in 2007, its eight members focus on their core values of investing in each other while promoting volunteerism and education in their communities.</p>
+	<p>EnvisionEight, LLC is an investment group with a philanthropic focus from Chagrin Falls, Ohio. Founded in 2007, it consists of eight members who focus on their core values of investing, volunteering, and promoting education.</p>
 	<p>Each spring, the group awards the EnvisionEight Leaders of Tomorrow scholarship to a graduating senior at Chagrin Falls High School. This scholarship recognizes students who exemplify outstanding leadership, teamwork, intellectual curiosity, entrepreneurship, work ethic, and community service.</p>
-	<p>EnvisionEight is Alex Budin, Michael Kennedy, Stephen Kuenzig, Patrick Lynch, Bill McGibony, Jeffrey Miller, Garrett Monda, and Matthew Trinetti.</p>
-	<p>Contact EnvisionEight on <a href='https://www.facebook.com/EnvisionEight-100121666733051/'>Facebook</a>. 
-	<br/>
-	<a href='https://www.facebook.com/EnvisionEight-100121666733051/'><img id="fb" src='facebookIcon.png'/></a>
-	</p>
-	<img class="img-center" style="box-shadow: 10px 10px 5px #888888;" src='envisioneight.jpg'/>
+	<p>The members are Alex Budin, Michael Kennedy, Stephen Kuenzig, Patrick Lynch, Bill McGibony, Jeffrey Miller, Garrett Monda, and Matthew Trinetti.</p>
+	<p>Contact EnvisionEight on <a href='https://www.facebook.com/EnvisionEight-100121666733051/'>Facebook</a>.</p>
+	<br/><img class="img-center" style="box-shadow: 10px 10px 5px #888888;" src='e8_1.jpg'/>
 
 </div>
 </body>
