--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body {
    margin-top: 50px;
    margin-bottom: 50px;
    font-family: Verdana, Geneva, sans-serif;
-   line-height: 150%;
+   line-height: 150%; 
    
 }
 
@@ -46,7 +46,7 @@ body {
 <div id="over">
 	<img class="img-center" src='e8logo.png' style='height:200px;'>
 	<br>
-	<p>EnvisionEight, LLC is an investment group with a philanthropic focus from Chagrin Falls, Ohio. Founded in 2007, it consists of eight members who focus on their core values of investing, volunteering, and promoting education.</p>
+	<p>EnvisionEight, LLC is an investment group with a philanthropic focus from Chagrin Falls, Ohio. Founded in 2007, it consists of eight members who focus on their core values of knowledge, philanthropy, and prosperity.</p>
 	<p>Each spring, the group awards the EnvisionEight Leaders of Tomorrow scholarship to a graduating senior at Chagrin Falls High School. This scholarship recognizes students who exemplify outstanding leadership, teamwork, intellectual curiosity, entrepreneurship, work ethic, and community service.</p>
 	<p>The members are Alex Budin, Michael Kennedy, Stephen Kuenzig, Patrick Lynch, Bill McGibony, Jeffrey Miller, Garrett Monda, and Matthew Trinetti.</p>
 	<p>Contact EnvisionEight on <a href='https://www.facebook.com/EnvisionEight-100121666733051/'>Facebook</a>.</p>
